Compiler/code/front_end/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    SELF_TYPE
    COMMENTS
    SPECIAL_CHAR
    TRUE
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> class_list class POINT_AND_COMMA
Rule 3     class_list -> class POINT_AND_COMMA
Rule 4     class -> CLASS TYPE_ID O_KEY features_list_opt C_KEY
Rule 5     class -> CLASS TYPE_ID INHERITS TYPE_ID O_KEY features_list_opt C_KEY
Rule 6     features_list_opt -> features_list
Rule 7     features_list_opt -> empty
Rule 8     features_list -> features_list feature POINT_AND_COMMA
Rule 9     features_list -> feature POINT_AND_COMMA
Rule 10    feature -> ID O_PAR formal_params_list C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
Rule 11    feature -> ID O_PAR C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
Rule 12    feature -> ID TWO_POINTS TYPE_ID ASSIGNAMENT expression
Rule 13    feature -> ID TWO_POINTS TYPE_ID
Rule 14    formal_params_list -> formal_params_list COMMA formal_param
Rule 15    formal_params_list -> formal_param
Rule 16    formal_param -> ID TWO_POINTS TYPE_ID
Rule 17    expression -> ID
Rule 18    expression -> INT
Rule 19    expression -> BOOL
Rule 20    expression -> STRING
Rule 21    expression -> SELF
Rule 22    expression -> O_KEY block_list C_KEY
Rule 23    block_list -> block_list expression POINT_AND_COMMA
Rule 24    block_list -> expression POINT_AND_COMMA
Rule 25    expression -> ID ASSIGNAMENT expression
Rule 26    expression -> expression POINT ID O_PAR arguments_list_opt C_PAR
Rule 27    arguments_list_opt -> arguments_list
Rule 28    arguments_list_opt -> empty
Rule 29    arguments_list -> arguments_list COMMA expression
Rule 30    arguments_list -> expression
Rule 31    expression -> expression AT TYPE_ID POINT ID O_PAR arguments_list_opt C_PAR
Rule 32    expression -> ID O_PAR arguments_list_opt C_PAR
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression STAR expression
Rule 36    expression -> expression DIV expression
Rule 37    expression -> expression LESS_THAN expression
Rule 38    expression -> expression LESS_EQUAL_THAN expression
Rule 39    expression -> expression EQUAL expression
Rule 40    expression -> O_PAR expression C_PAR
Rule 41    expression -> IF expression THEN expression ELSE expression FI
Rule 42    expression -> WHILE expression LOOP expression POOL
Rule 43    expression -> CASE expression OF actions_list ESAC
Rule 44    actions_list -> actions_list action
Rule 45    actions_list -> action
Rule 46    action -> ID TWO_POINTS TYPE_ID IMPLICATION expression POINT_AND_COMMA
Rule 47    expression -> NEW TYPE_ID
Rule 48    expression -> ISVOID expression
Rule 49    expression -> DESTRUCTOR expression
Rule 50    expression -> NOT expression
Rule 51    expression -> let_expression
Rule 52    let_expression -> LET generate_instances IN expression
Rule 53    generate_instances -> ID TWO_POINTS TYPE_ID
Rule 54    generate_instances -> ID TWO_POINTS TYPE_ID ASSIGNAMENT expression
Rule 55    generate_instances -> generate_instances COMMA ID TWO_POINTS TYPE_ID
Rule 56    generate_instances -> generate_instances COMMA ID TWO_POINTS TYPE_ID ASSIGNAMENT expression
Rule 57    empty -> <empty>

Terminals, with rules where they appear

ASSIGNAMENT          : 12 25 54 56
AT                   : 31
BOOL                 : 19
CASE                 : 43
CLASS                : 4 5
COMMA                : 14 29 55 56
COMMENTS             : 
C_KEY                : 4 5 10 11 22
C_PAR                : 10 11 26 31 32 40
DESTRUCTOR           : 49
DIV                  : 36
ELSE                 : 41
EQUAL                : 39
ESAC                 : 43
FALSE                : 
FI                   : 41
ID                   : 10 11 12 13 16 17 25 26 31 32 46 53 54 55 56
IF                   : 41
IMPLICATION          : 46
IN                   : 52
INHERITS             : 5
INT                  : 18
ISVOID               : 48
LESS_EQUAL_THAN      : 38
LESS_THAN            : 37
LET                  : 52
LOOP                 : 42
MINUS                : 34
NEW                  : 47
NOT                  : 50
OF                   : 43
O_KEY                : 4 5 10 11 22
O_PAR                : 10 11 26 31 32 40
PLUS                 : 33
POINT                : 26 31
POINT_AND_COMMA      : 2 3 8 9 23 24 46
POOL                 : 42
SELF                 : 21
SELF_TYPE            : 
SPECIAL_CHAR         : 
STAR                 : 35
STRING               : 20
THEN                 : 41
TRUE                 : 
TWO_POINTS           : 10 11 12 13 16 46 53 54 55 56
TYPE_ID              : 4 5 5 10 11 12 13 16 31 46 47 53 54 55 56
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

action               : 44 45
actions_list         : 43 44
arguments_list       : 27 29
arguments_list_opt   : 26 31 32
block_list           : 22 23
class                : 2 3
class_list           : 1 2
empty                : 7 28
expression           : 10 11 12 23 24 25 26 29 30 31 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 41 41 42 42 43 46 48 49 50 52 54 56
feature              : 8 9
features_list        : 6 8
features_list_opt    : 4 5
formal_param         : 14 15
formal_params_list   : 10 14
generate_instances   : 52 55 56
let_expression       : 51
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . class_list class POINT_AND_COMMA
    (3) class_list -> . class POINT_AND_COMMA
    (4) class -> . CLASS TYPE_ID O_KEY features_list_opt C_KEY
    (5) class -> . CLASS TYPE_ID INHERITS TYPE_ID O_KEY features_list_opt C_KEY

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .
    (2) class_list -> class_list . class POINT_AND_COMMA
    (4) class -> . CLASS TYPE_ID O_KEY features_list_opt C_KEY
    (5) class -> . CLASS TYPE_ID INHERITS TYPE_ID O_KEY features_list_opt C_KEY

    $end            reduce using rule 1 (program -> class_list .)
    CLASS           shift and go to state 4

    class                          shift and go to state 5

state 3

    (3) class_list -> class . POINT_AND_COMMA

    POINT_AND_COMMA shift and go to state 6


state 4

    (4) class -> CLASS . TYPE_ID O_KEY features_list_opt C_KEY
    (5) class -> CLASS . TYPE_ID INHERITS TYPE_ID O_KEY features_list_opt C_KEY

    TYPE_ID         shift and go to state 7


state 5

    (2) class_list -> class_list class . POINT_AND_COMMA

    POINT_AND_COMMA shift and go to state 8


state 6

    (3) class_list -> class POINT_AND_COMMA .

    CLASS           reduce using rule 3 (class_list -> class POINT_AND_COMMA .)
    $end            reduce using rule 3 (class_list -> class POINT_AND_COMMA .)


state 7

    (4) class -> CLASS TYPE_ID . O_KEY features_list_opt C_KEY
    (5) class -> CLASS TYPE_ID . INHERITS TYPE_ID O_KEY features_list_opt C_KEY

    O_KEY           shift and go to state 9
    INHERITS        shift and go to state 10


state 8

    (2) class_list -> class_list class POINT_AND_COMMA .

    CLASS           reduce using rule 2 (class_list -> class_list class POINT_AND_COMMA .)
    $end            reduce using rule 2 (class_list -> class_list class POINT_AND_COMMA .)


state 9

    (4) class -> CLASS TYPE_ID O_KEY . features_list_opt C_KEY
    (6) features_list_opt -> . features_list
    (7) features_list_opt -> . empty
    (8) features_list -> . features_list feature POINT_AND_COMMA
    (9) features_list -> . feature POINT_AND_COMMA
    (57) empty -> .
    (10) feature -> . ID O_PAR formal_params_list C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (11) feature -> . ID O_PAR C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (12) feature -> . ID TWO_POINTS TYPE_ID ASSIGNAMENT expression
    (13) feature -> . ID TWO_POINTS TYPE_ID

    C_KEY           reduce using rule 57 (empty -> .)
    ID              shift and go to state 15

    features_list_opt              shift and go to state 11
    features_list                  shift and go to state 12
    empty                          shift and go to state 13
    feature                        shift and go to state 14

state 10

    (5) class -> CLASS TYPE_ID INHERITS . TYPE_ID O_KEY features_list_opt C_KEY

    TYPE_ID         shift and go to state 16


state 11

    (4) class -> CLASS TYPE_ID O_KEY features_list_opt . C_KEY

    C_KEY           shift and go to state 17


state 12

    (6) features_list_opt -> features_list .
    (8) features_list -> features_list . feature POINT_AND_COMMA
    (10) feature -> . ID O_PAR formal_params_list C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (11) feature -> . ID O_PAR C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (12) feature -> . ID TWO_POINTS TYPE_ID ASSIGNAMENT expression
    (13) feature -> . ID TWO_POINTS TYPE_ID

    C_KEY           reduce using rule 6 (features_list_opt -> features_list .)
    ID              shift and go to state 15

    feature                        shift and go to state 18

state 13

    (7) features_list_opt -> empty .

    C_KEY           reduce using rule 7 (features_list_opt -> empty .)


state 14

    (9) features_list -> feature . POINT_AND_COMMA

    POINT_AND_COMMA shift and go to state 19


state 15

    (10) feature -> ID . O_PAR formal_params_list C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (11) feature -> ID . O_PAR C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (12) feature -> ID . TWO_POINTS TYPE_ID ASSIGNAMENT expression
    (13) feature -> ID . TWO_POINTS TYPE_ID

    O_PAR           shift and go to state 20
    TWO_POINTS      shift and go to state 21


state 16

    (5) class -> CLASS TYPE_ID INHERITS TYPE_ID . O_KEY features_list_opt C_KEY

    O_KEY           shift and go to state 22


state 17

    (4) class -> CLASS TYPE_ID O_KEY features_list_opt C_KEY .

    POINT_AND_COMMA reduce using rule 4 (class -> CLASS TYPE_ID O_KEY features_list_opt C_KEY .)


state 18

    (8) features_list -> features_list feature . POINT_AND_COMMA

    POINT_AND_COMMA shift and go to state 23


state 19

    (9) features_list -> feature POINT_AND_COMMA .

    ID              reduce using rule 9 (features_list -> feature POINT_AND_COMMA .)
    C_KEY           reduce using rule 9 (features_list -> feature POINT_AND_COMMA .)


state 20

    (10) feature -> ID O_PAR . formal_params_list C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (11) feature -> ID O_PAR . C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (14) formal_params_list -> . formal_params_list COMMA formal_param
    (15) formal_params_list -> . formal_param
    (16) formal_param -> . ID TWO_POINTS TYPE_ID

    C_PAR           shift and go to state 26
    ID              shift and go to state 24

    formal_params_list             shift and go to state 25
    formal_param                   shift and go to state 27

state 21

    (12) feature -> ID TWO_POINTS . TYPE_ID ASSIGNAMENT expression
    (13) feature -> ID TWO_POINTS . TYPE_ID

    TYPE_ID         shift and go to state 28


state 22

    (5) class -> CLASS TYPE_ID INHERITS TYPE_ID O_KEY . features_list_opt C_KEY
    (6) features_list_opt -> . features_list
    (7) features_list_opt -> . empty
    (8) features_list -> . features_list feature POINT_AND_COMMA
    (9) features_list -> . feature POINT_AND_COMMA
    (57) empty -> .
    (10) feature -> . ID O_PAR formal_params_list C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (11) feature -> . ID O_PAR C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (12) feature -> . ID TWO_POINTS TYPE_ID ASSIGNAMENT expression
    (13) feature -> . ID TWO_POINTS TYPE_ID

    C_KEY           reduce using rule 57 (empty -> .)
    ID              shift and go to state 15

    features_list_opt              shift and go to state 29
    features_list                  shift and go to state 12
    empty                          shift and go to state 13
    feature                        shift and go to state 14

state 23

    (8) features_list -> features_list feature POINT_AND_COMMA .

    ID              reduce using rule 8 (features_list -> features_list feature POINT_AND_COMMA .)
    C_KEY           reduce using rule 8 (features_list -> features_list feature POINT_AND_COMMA .)


state 24

    (16) formal_param -> ID . TWO_POINTS TYPE_ID

    TWO_POINTS      shift and go to state 30


state 25

    (10) feature -> ID O_PAR formal_params_list . C_PAR TWO_POINTS TYPE_ID O_KEY expression C_KEY
    (14) formal_params_list -> formal_params_list . COMMA formal_param

    C_PAR           shift and go to state 31
    COMMA           shift and go to state 32


state 26

    (11) feature -> ID O_PAR C_PAR . TWO_POINTS TYPE_ID O_KEY expression C_KEY

    TWO_POINTS      shift and go to state 33


state 27

    (15) formal_params_list -> formal_param .

    C_PAR           reduce using rule 15 (formal_params_list -> formal_param .)
    COMMA           reduce using rule 15 (formal_params_list -> formal_param .)


state 28

    (12) feature -> ID TWO_POINTS TYPE_ID . ASSIGNAMENT expression
    (13) feature -> ID TWO_POINTS TYPE_ID .

    ASSIGNAMENT     shift and go to state 34
    POINT_AND_COMMA reduce using rule 13 (feature -> ID TWO_POINTS TYPE_ID .)


state 29

    (5) class -> CLASS TYPE_ID INHERITS TYPE_ID O_KEY features_list_opt . C_KEY

    C_KEY           shift and go to state 35


state 30

    (16) formal_param -> ID TWO_POINTS . TYPE_ID

    TYPE_ID         shift and go to state 36


state 31

    (10) feature -> ID O_PAR formal_params_list C_PAR . TWO_POINTS TYPE_ID O_KEY expression C_KEY

    TWO_POINTS      shift and go to state 37


state 32

    (14) formal_params_list -> formal_params_list COMMA . formal_param
    (16) formal_param -> . ID TWO_POINTS TYPE_ID

    ID              shift and go to state 24

    formal_param                   shift and go to state 38

state 33

    (11) feature -> ID O_PAR C_PAR TWO_POINTS . TYPE_ID O_KEY expression C_KEY

    TYPE_ID         shift and go to state 39


state 34

    (12) feature -> ID TWO_POINTS TYPE_ID ASSIGNAMENT . expression
    (17) expression -> . ID
    (18) expression -> . INT
    (19) expression -> . BOOL
    (20) expression -> . STRING
    (21) expression -> . SELF
    (22) expression -> . O_KEY block_list C_KEY
    (25) expression -> . ID ASSIGNAMENT expression
    (26) expression -> . expression POINT ID O_PAR arguments_list_opt C_PAR
    (31) expression -> . expression AT TYPE_ID POINT ID O_PAR arguments_list_opt C_PAR
    (32) expression -> . ID O_PAR arguments_list_opt C_PAR
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression STAR expression
    (36) expression -> . expression DIV expression
    (37) expression -> . expression LESS_THAN expression
    (38) expression -> . expression LESS_EQUAL_THAN expression
    (39) expression -> . expression EQUAL expression
    (40) expression -> . O_PAR expression C_PAR
    (41) expression -> . IF expression THEN expression ELSE expression FI
    (42) expression -> . WHILE expression LOOP expression POOL
    (43) expression -> . CASE expression OF actions_list ESAC
    (47) expression -> . NEW TYPE_ID
    (48) expression -> . ISVOID expression
    (49) expression -> . DESTRUCTOR expression
    (50) expression -> . NOT expression
    (51) expression -> . let_expression
    (52) let_expression -> . LET generate_instances IN expression

    ID              shift and go to state 40
    INT             shift and go to state 42
    BOOL            shift and go to state 43
    STRING          shift and go to state 44
    SELF            shift and go to state 45
    O_KEY           shift and go to state 46
    O_PAR           shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    CASE            shift and go to state 50
    NEW             shift and go to state 51
    ISVOID          shift and go to state 52
    DESTRUCTOR      shift and go to state 53
    NOT             shift and go to state 54
    LET             shift and go to state 56

    expression                     shift and go to state 41
    let_expression                 shift and go to state 55

state 35

    (5) class -> CLASS TYPE_ID INHERITS TYPE_ID O_KEY features_list_opt C_KEY .

    POINT_AND_COMMA reduce using rule 5 (class -> CLASS TYPE_ID INHERITS TYPE_ID O_KEY features_list_opt C_KEY .)


state 36

    (16) formal_param -> ID TWO_POINTS TYPE_ID .

    C_PAR           reduce using rule 16 (formal_param -> ID TWO_POINTS TYPE_ID .)
    COMMA           reduce using rule 16 (formal_param -> ID TWO_POINTS TYPE_ID .)


state 37

    (10) feature -> ID O_PAR formal_params_list C_PAR TWO_POINTS . TYPE_ID O_KEY expression C_KEY

    TYPE_ID         shift and go to state 57


state 38

    (14) formal_params_list -> formal_params_list COMMA formal_param .

    C_PAR           reduce using rule 14 (formal_params_list -> formal_params_list COMMA formal_param .)
    COMMA           reduce using rule 14 (formal_params_list -> formal_params_list COMMA formal_param .)


state 39

    (11) feature -> ID O_PAR C_PAR TWO_POINTS TYPE_ID . O_KEY expression C_KEY

    O_KEY           shift and go to state 58


state 40

    (17) expression -> ID .
    (25) expression -> ID . ASSIGNAMENT expression
    (32) expression -> ID . O_PAR arguments_list_opt C_PAR

    POINT           reduce using rule 17 (expression -> ID .)
    AT              reduce using rule 17 (expression -> ID .)
    PLUS            reduce using rule 17 (expression -> ID .)
    MINUS           reduce using rule 17 (expression -> ID .)
    STAR            reduce using rule 17 (expression -> ID .)
    DIV             reduce using rule 17 (expression -> ID .)
    LESS_THAN       reduce using rule 17 (expression -> ID .)
    LESS_EQUAL_THAN reduce using rule 17 (expression -> ID .)
    EQUAL           reduce using rule 17 (expression -> ID .)
    POINT_AND_COMMA reduce using rule 17 (expression -> ID .)
    C_PAR           reduce using rule 17 (expression -> ID .)
    THEN            reduce using rule 17 (expression -> ID .)
    LOOP            reduce using rule 17 (expression -> ID .)
    OF              reduce using rule 17 (expression -> ID .)
    C_KEY           reduce using rule 17 (expression -> ID .)
    COMMA           reduce using rule 17 (expression -> ID .)
    ELSE            reduce using rule 17 (expression -> ID .)
    POOL            reduce using rule 17 (expression -> ID .)
    FI              reduce using rule 17 (expression -> ID .)
    IN              reduce using rule 17 (expression -> ID .)
    ASSIGNAMENT     shift and go to state 59
    O_PAR           shift and go to state 60


state 41

    (12) feature -> ID TWO_POINTS TYPE_ID ASSIGNAMENT expression .
    (26) expression -> expression . POINT ID O_PAR arguments_list_opt C_PAR
    (31) expression -> expression . AT TYPE_ID POINT ID O_PAR arguments_list_opt C_PAR
    (33) expression -> expression . PLUS expression
    (34) expression -> expression . MINUS expression
    (35) expression -> expression . STAR expression
    (36) expression -> expression . DIV expression
    (37) expression -> expression . LESS_THAN expression
    (38) expression -> expression . LESS_EQUAL_THAN expression
    (39) expression -> expression . EQUAL expression

    POINT_AND_COMMA reduce using rule 12 (feature -> ID TWO_POINTS TYPE_ID ASSIGNAMENT expression .)
    POINT           shift and go to state 61
    AT              shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    STAR            shift and go to state 65
    DIV             shift and go to state 66
    LESS_THAN       shift and go to state 67
    LESS_EQUAL_THAN shift and go to state 68
    EQUAL           shift and go to state 69


state 42

    (18) expression -> INT .

    POINT           reduce using rule 18 (expression -> INT .)
    AT              reduce using rule 18 (expression -> INT .)
    PLUS            reduce using rule 18 (expression -> INT .)
    MINUS           reduce using rule 18 (expression -> INT .)
    STAR            reduce using rule 18 (expression -> INT .)
    DIV             reduce using rule 18 (expression -> INT .)
    LESS_THAN       reduce using rule 18 (expression -> INT .)
    LESS_EQUAL_THAN reduce using rule 18 (expression -> INT .)
    EQUAL           reduce using rule 18 (expression -> INT .)
    POINT_AND_COMMA reduce using rule 18 (expression -> INT .)
    C_PAR           reduce using rule 18 (expression -> INT .)
    THEN            reduce using rule 18 (expression -> INT .)
    LOOP            reduce using rule 18 (expression -> INT .)
    OF              reduce using rule 18 (expression -> INT .)
    C_KEY           reduce using rule 18 (expression -> INT .)
    COMMA           reduce using rule 18 (expression -> INT .)
    ELSE            reduce using rule 18 (expression -> INT .)
    POOL            reduce using rule 18 (expression -> INT .)
    FI              reduce using rule 18 (expression -> INT .)
    IN              reduce using rule 18 (expression -> INT .)


state 43

    (19) expression -> BOOL .

    POINT           reduce using rule 19 (expression -> BOOL .)
    AT              reduce using rule 19 (expression -> BOOL .)
    PLUS            reduce using rule 19 (expression -> BOOL .)
    MINUS           reduce using rule 19 (expression -> BOOL .)
    STAR            reduce using rule 19 (expression -> BOOL .)
    DIV             reduce using rule 19 (expression -> BOOL .)
    LESS_THAN       reduce using rule 19 (expression -> BOOL .)
    LESS_EQUAL_THAN reduce using rule 19 (expression -> BOOL .)
    EQUAL           reduce using rule 19 (expression -> BOOL .)
    POINT_AND_COMMA reduce using rule 19 (expression -> BOOL .)
    C_PAR           reduce using rule 19 (expression -> BOOL .)
    THEN            reduce using rule 19 (expression -> BOOL .)
    LOOP            reduce using rule 19 (expression -> BOOL .)
    OF              reduce using rule 19 (expression -> BOOL .)
    C_KEY           reduce using rule 19 (expression -> BOOL .)
    COMMA           reduce using rule 19 (expression -> BOOL .)
    ELSE            reduce using rule 19 (expression -> BOOL .)
    POOL            reduce using rule 19 (expression -> BOOL .)
    FI              reduce using rule 19 (expression -> BOOL .)
    IN              reduce using rule 19 (expression -> BOOL .)


state 44

    (20) expression -> STRING .

    POINT           reduce using rule 20 (expression -> STRING .)
    AT              reduce using rule 20 (expression -> STRING .)
    PLUS            reduce using rule 20 (expression -> STRING .)
